tests/integration2/galley/testdata/authentication-v1alpha1-Policy-valid.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: valid-authentication-policy
spec:
  targets:
  - name: good-target
