tests/integration2/galley/testdata/config-v1alpha2-circonus-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: circonus
metadata:
  name: invalid-circonus
spec:
  badField: foo
