tests/integration2/galley/testdata/config-v1alpha2-denier-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: denier
metadata:
  name: valid-denyall
spec:
  status:
    code: 7
    message: Not allowed
