tests/integration2/galley/testdata/config-v1alpha2-DestinationPolicy-valid-skipped.yaml
apiVersion: config.istio.io/v1alpha2
kind: DestinationPolicy
metadata:
  name: valid-destination-policy
spec:
  destination:
    name: reviews
  loadBalancing:
    name: RANDOM
