tests/integration2/galley/testdata/config-v1alpha2-EgressRule-valid-skipped.yaml
apiVersion: config.istio.io/v1alpha2
kind: EgressRule
metadata:
  name: valid-egress-rule
spec:
  destination:
      service: 91.198.174.192/27
  ports:
      - port: 443
        protocol: tcp
  use_egress_proxy: false
