tests/integration2/galley/testdata/config-v1alpha2-fluentd-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: fluentd
metadata:
  name: invalid-fluentd
spec:
  badField: foo
  address: "localhost:24224"
