tests/integration2/galley/testdata/config-v1alpha2-HTTPAPISpecBinding-invalid.yaml
apiVersion: config.istio.io/v1alpha2
kind: HTTPAPISpecBinding
metadata:
  name: invalid-http-api-spec-binding
spec:
