tests/integration2/galley/testdata/config-v1alpha2-kubernetes-invalid-skipped.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: kubernetes
metadata:
  name: valid-kubernetes
spec:
  badField: foo
