tests/integration2/galley/testdata/config-v1alpha2-kubernetes-valid-skipped.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: kubernetes
metadata:
  name: valid-kubernetes
spec:
  # Pass the required attribute data to the adapter
  source_uid: source.uid | ""
  source_ip: source.ip | ip("0.0.0.0") # default to unspecified ip addr
  destination_uid: destination.uid | ""
  destination_ip: destination.ip | ip("0.0.0.0") # default to unspecified ip addr
  origin_uid: '""'
  origin_ip: ip("0.0.0.0") # default to unspecified ip addr
  attribute_bindings:
    # Fill the new attributes from the adapter produced output.
    # $out refers to an instance of OutputTemplate message
    #source.ip: $out.source_pod_ip | ip("0.0.0.0")
    # source.labels: $out.source_labels | emptyStringMap()
    #source.namespace: $out.source_namespace | "default"
    #source.service: $out.source_service | "unknown"
    #source.serviceAccount: $out.source_service_account_name | "unknown"
    destination.ip: $out.destination_pod_ip | ip("0.0.0.0")
    destination.labels: $out.destination_labels | emptyStringMap()
    destination.namespace: $out.destination_namespace | "default"
    destination.service: $out.destination_service | "unknown"
    #destination.serviceAccount: $out.destination_service_account_name | "unknown"
