tests/integration2/galley/testdata/config-v1alpha2-listchecker-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: listchecker
metadata:
  name: invalid-listchecker
spec:
  badField: foo
