tests/integration2/galley/testdata/config-v1alpha2-listchecker-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: listchecker
metadata:
  name: valid-listchecker
spec:
  overrides: ["v1", "v2"]  # overrides provide a static list
  blacklist: false
