tests/integration2/galley/testdata/config-v1alpha2-memquota-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: memquota
metadata:
  name: valid-memquota
spec:
  quotas:
  - name: requestcount.quota.istio-system
    maxAmount: 5000
    validDuration: 1s
    overrides:
    - dimensions:
        destination: ratings
        source: reviews
      maxAmount: 1
      validDuration: 1s
