tests/integration2/galley/testdata/config-v1alpha2-QuotaSpecBinding-invalid.yaml
apiVersion: config.istio.io/v1alpha2
kind: QuotaSpecBinding
metadata:
  name: valid-quota-spec-binding
spec:
