tests/integration2/galley/testdata/config-v1alpha2-RouteRule-valid-skipped.yaml
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: valid-route-rule
spec:
  destination:
    service: ratings.service.consul
  precedence: 2
  route:
  - labels:
      version: v2
