tests/integration2/galley/testdata/config-v1alpha2-rule-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: denier
metadata:
  name: handler-for-valid-rule
spec:
  status:
    code: 7
    message: Not allowed
---
apiVersion: "config.istio.io/v1alpha2"
kind: checknothing
metadata:
  name: instance-for-valid-rule
spec:
---
apiVersion: "config.istio.io/v1alpha2"
kind: rule
metadata:
  name: valid-rule
spec:
  match: request.headers["clnt"] == "abc"
  actions:
  - handler: handler-for-valid-rule.denier
    instances:
    - instance-for-valid-rule.checknothing
