tests/integration2/galley/testdata/config-v1alpha2-servicecontrol-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: servicecontrol
metadata:
  name: valid-servicecontrol
spec:
  runtime_config:
    check_cache_size: 200
    check_result_expiration: 60s
  credential_path: "/etc/token/token.json"
  service_configs:
    - mesh_service_name: "productpage.default.svc.cluster.local"
      google_service_name: "bookinfo.endpoints.istio-manlinl.cloud.goog"
      quotas:
        - name: read-requests.quota.istio-system
          google_quota_metric_name: read-requests
          expiration: 1m
