tests/integration2/galley/testdata/config-v1alpha2-servicecontrolreport-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: servicecontrolreport
metadata:
  name: invalid-servicecontrolreport
spec:
  badField: foo
