tests/integration2/galley/testdata/config-v1alpha2-ServiceRole-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: ServiceRole
metadata:
  name: products-viewer
spec:
  rules:
