tests/integration2/galley/testdata/config-v1alpha2-ServiceRoleBinding-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: ServiceRoleBinding
metadata:
  name: test-binding-products
spec:
  subjects:
